@@ -12,6 +12,9 @@ Post-v2.15.0
    - DPDK:
      * OVS validated with DPDK 20.11.1. It is recommended to use this version
        until further releases.
+   - ovsdb-tool:
+     * New option '--election-timer' to the 'create-cluster' command to set the
+       leader election timer during cluster creation.
 
 
 v2.15.0 - 15 Feb 2021
